<resources>
    <string name="video_duration">Duration</string>
    <string name="video_saved_words">Saved words</string>
    <string name="video_is_uploading">Video is uploading</string>


    <string name="video_loading_status">Status</string>
    <string name="video_loading_status_waiting">Waiting</string>
    <string name="video_loading_status_loading_audio">Loading audio</string>
    <string name="video_loading_status_decoding_video">Decoding video</string>
    <string name="video_loading_status_extracting_audio">Extracting audio</string>
    <string name="video_loading_status_generating_subtitles">Generating subtitles</string>
    <string name="video_loading_status_done">Done</string>



    <string name="video_processing_error">Video processing error</string>
    <string name="audio_extraction_error">Audio extraction error</string>
    <string name="video_decoding_error">Video decoding error</string>
    <string name="audio_upload_error">Audio upload error</string>
    <string name="subtitle_generation_error">Subtitle generation error</string>



    <string name="the_video_does_not_exist">The video does not exist</string>
    <string name="the_video_is_uploading">The video is uploading</string>



    <string name="copy">Copy</string>
    <string name="share">Share</string>
    <string name="sort_by">Sort by</string>
    <string name="select_all">Select all</string>
    <string name="deselect_all">Deselect all</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="add_subtitles">Add subtitles</string>
    <string name="return_subtitles">Return subtitles</string>
    <string name="add_preview">Add preview</string>



    <string name="video">Video</string>
    <string name="subtitle_extraction_error">Subtitle extraction error</string>
</resources>