<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/constraint_container"
    tools:context=".presentation.VideoListFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/image_size_large"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_centerInParent="true"
                android:text="@string/video"
                android:textColor="?attr/text_color"
                android:textSize="@dimen/text_h1"
                tools:ignore="RelativeOverlap" />

            <ImageButton
                android:id="@+id/sort_by"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="@dimen/image_size_large"
                android:layout_height="@dimen/image_size_large"
                android:padding="@dimen/image_padding"
                android:scaleType="centerInside"
                android:layout_alignParentEnd="true"

                app:srcCompat="@drawable/sort_by"
                app:tint="?attr/text_color" />

        </RelativeLayout>


    </LinearLayout>

    <include
        android:id="@+id/search_bar"
        layout="@layout/search_view"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/video_list"
            style="@style/RecyclerInEditListMenu"/>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/load_video_card"
            style="@style/CardViewAdd"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    style="@style/CardViewAddBackground"
                    android:src="@color/video_upload_green_card" />

                <ImageView
                    style="@style/CardViewAddImage"
                    android:src="@drawable/upload" />
            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/close_selection_mode"
            android:visibility="gone"
            style="@style/CardViewAdd"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    style="@style/CardViewAddBackground"
                    android:src="@color/video_close_selection_mode_card"/>
                <ImageView
                    style="@style/CardViewAddImage"
                    android:src="@drawable/close_bold" />
            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>


    </RelativeLayout>

    <LinearLayout
        android:id="@+id/edit_list_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/select_mode_layout_height"
        android:visibility="gone"
        android:orientation="horizontal">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/add_subtitles_menu"
            style="@style/CardViewInEditListMenu">
            <LinearLayout
                style="@style/TileInEditListMenu">
                <ImageView
                    style="@style/ImageInEditListMenu"
                    android:padding="2dp"
                    android:src="@drawable/srt_file"/>
                <TextView
                    android:id="@+id/add_subtitles_menu_text"
                    style="@style/TextInEditListMenu"
                    android:text="@string/add_subtitles"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/rename_menu"
            style="@style/CardViewInEditListMenu">
            <LinearLayout
                style="@style/TileInEditListMenu">
                <ImageView
                    style="@style/ImageInEditListMenu"
                    android:src="@drawable/edit"/>
                <TextView
                    style="@style/TextInEditListMenu"
                    android:text="@string/rename"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/delete_menu"
            style="@style/CardViewInEditListMenu">
            <LinearLayout
                style="@style/TileInEditListMenu">
                <ImageView
                    style="@style/ImageInEditListMenu"
                    android:src="@drawable/trash"/>
                <TextView
                    style="@style/TextInEditListMenu"
                    android:text="@string/delete"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/de_select_all_menu"
            style="@style/CardViewInEditListMenu">
            <LinearLayout
                style="@style/TileInEditListMenu">
                <ImageView
                    style="@style/ImageInEditListMenu"
                    android:src="@drawable/check_all"/>
                <TextView
                    android:id="@+id/de_select_all_menu_text"
                    style="@style/TextInEditListMenu"
                    android:text="@string/select_all"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>




</LinearLayout>